[package]
name = "json_provider"
version = "0.1.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
description = "Macro to infer types from a JSON sample"
homepage = "https://github.com/evestera/json_sample"
repository = "https://github.com/evestera/json_sample"
documentation = "https://docs.rs/json_provider"
readme = "../README.md"

[badges]
travis-ci = { repository = "evestera/json_sample" }

[dependencies]
serde = "0.9"
serde_derive = "0.9"
json_sample_derive = { path = "../json_sample_derive" }
