[package]
name = "json_sample_shared"
version = "0.1.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
description = "Codegen from JSON samples. Not intended to be used directly. See repository for the intended crates."
homepage = "https://github.com/evestera/json_sample"
repository = "https://github.com/evestera/json_sample"
documentation = "https://docs.rs/json_sample_shared"
readme = "../README.md"

[dependencies]
quote = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = { version = "0.9", features = ["preserve_order"] }
reqwest = "0.4"
error-chain = "0.10"
lazy_static = "0.2"
linked-hash-map = { version = "0.4.1" }
