[package]
name = "json_sample_web"
version = "0.1.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"

[dependencies]
iron = "0.5.1"
mount = "0.3.0"
staticfile = "0.4.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rustfmt = "0.7"
json_sample_shared = { path = "../json_sample_shared" }
error-chain = "0.10"
