[package]
name = "json_typegen"
version = "0.2.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
description = "Procedural macro that generates Rust types from JSON samples"
keywords = ["json", "code-generation", "macro", "proc-macro", "serde"]
categories = ["encoding"]
homepage = "https://github.com/evestera/json_typegen"
repository = "https://github.com/evestera/json_typegen"
documentation = "https://docs.rs/json_typegen"
readme = "README.md"

[badges]
travis-ci = { repository = "evestera/json_typegen" }

[dependencies]
serde = "0.9"
serde_derive = "0.9"
json_typegen_derive = { path = "../json_typegen_derive", version = "0.2" }

[dev-dependencies]
serde_json = "0.9"
