[package]
name = "json_typegen"
version = "0.7.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT OR Apache-2.0"
description = "Procedural macro that generates Rust types from JSON samples"
keywords = ["json", "code-generation", "macro", "proc-macro", "serde"]
categories = ["encoding"]
homepage = "https://typegen.vestera.as"
repository = "https://github.com/evestera/json_typegen"
documentation = "https://docs.rs/json_typegen"
readme = "README.md"
edition = "2021"

[features]
default = ["remote-samples", "local-samples"]
remote-samples = ["json_typegen_shared/remote-samples"]
local-samples = ["json_typegen_shared/local-samples"]

[dependencies.json_typegen_shared]
path = "../json_typegen_shared"
version = "0.7"
default-features = false
features = ["option-parsing"]

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
proc-macro = true
