[package]
name = "json_typegen_cli"
version = "0.7.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT OR Apache-2.0"
description = "Command line utility for generating Rust, Kotlin and TypeScript types from JSON samples"
keywords = ["json", "code-generation", "cli", "serde"]
categories = ["command-line-utilities", "encoding"]
homepage = "https://typegen.vestera.as"
repository = "https://github.com/evestera/json_typegen"
documentation = "https://docs.rs/json_typegen_cli"
readme = "README.md"
edition = "2021"

[dependencies]
clap = "2.33.3"

[dependencies.json_typegen_shared]
path = "../json_typegen_shared"
version = "0.7"
features = ["progress"]

[[bin]]
name = "json_typegen"
path = "src/main.rs"
