[package]
name = "json_typegen_demo"
version = "0.4.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# json_typegen = "0.4"
json_typegen = { path = "../json_typegen", version = "0.4" }
