[package]
name = "json_sample_derive"
version = "0.1.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
description = "Custom derive for codegen from JSON samples. Primarily for use by json_provider crate."
homepage = "https://github.com/evestera/json_sample"
repository = "https://github.com/evestera/json_sample"
documentation = "https://docs.rs/json_sample_derive"
readme = "../README.md"

[dependencies]
syn = "0.10"
quote = "0.3"
json_sample_shared = { path = "../json_sample_shared" }

[lib]
proc-macro = true
