[package]
name = "json_typegen_derive"
version = "0.1.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
description = "Custom derive for codegen from JSON samples. Primarily for use by json_typegen crate."
homepage = "https://github.com/evestera/json_typegen"
repository = "https://github.com/evestera/json_typegen"
documentation = "https://docs.rs/json_typegen_derive"
readme = "../README.md"

[dependencies]
syn = "0.10"
quote = "0.3"
json_typegen_shared = { path = "../json_typegen_shared" }

[lib]
proc-macro = true
