[package]
name = "json_typegen_shared"
version = "0.7.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
description = "Codegen from JSON samples. Not intended to be used directly. See repository for the intended crates."
homepage = "https://github.com/evestera/json_typegen"
repository = "https://github.com/evestera/json_typegen"
documentation = "https://docs.rs/json_typegen_shared"
readme = "README.md"
edition = "2018"

[features]
unstable = []
default = ["remote-samples", "local-samples", "option-parsing"]
remote-samples = ["reqwest"]
local-samples = []
option-parsing = ["syn", "synom"]

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.11", optional = true, features = ["blocking"] }
error-chain = "0.12.4"
lazy_static = "1.2"
linked-hash-map = "0.5.3"
Inflector = "0.11"
regex = "1.1"
syn = { version = "0.11", features = ["full", "parsing"], optional = true }
synom = { version = "0.11.3", optional = true }
unindent = "0.1.2"

[dev-dependencies]
testsyn = { package = "syn", version = "0.15", features = ["full", "parsing", "extra-traits"] }
