[package]
name = "json_typegen_web"
version = "0.3.1"
authors = ["Erik Vesteraas <erik@vestera.as>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2018"

[dependencies]
iron = "0.5.1"
mount = "0.3.0"
staticfile = "0.4.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
error-chain = "0.10"

[dependencies.json_typegen_shared]
path = "../json_typegen_shared"
default-features = false
features = []
